# identitykit

./: .env  .env.dev  .env.ic  .env.prod  .eslintrc.js  .gitignore  .prettierrc  Cargo.toml  README.md  canister_ids.json  dfx.json  jest.config.ts  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  tsconfig.lint.json  turbo.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy-demo.yml  deploy-docs.yml  deploy.yml  npm-release.yml  release.yml  test.yml
config/eslint-config/: library.js  package.json
config/typescript-config/: package.json
docker-for-e2e/: CI_OUTPUT.sh  Dockerfile  docker-entrypoint.sh
docs/: .gitignore  README.md  next.config.js  next.config.mjs  package.json  tailwind.config.js  theme.config.tsx
docs/components/: ThemedImage.tsx  blog-index.tsx  stack-blitz.tsx  stack.tsx
docs/pages/: _app.jsx  _meta.json  _meta.ts  blog.mdx  considerations.mdx  identity-kit.mdx  index.mdx
docs/styles/: globals.css
examples/react-dapp/: .eslintrc.cjs  index.html  package.json  playwright.config.ts  tailwind.config.js  turbo.json  vite.config.ts
examples/react-demo/: .eslintrc.cjs  .gitignore  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  turbo.json  vite.config.ts
examples/react-signer/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  tsconfig.json  (+1 more)
examples/signer-backend/: Cargo.toml  signer-backend.did
examples/signer-backend/src/: cert_trusted.rs  lib.rs  types.rs
landing/: index.html  package.json  tailwind.config.js  turbo.json  vite.config.ts
(+324 files in other folders)
