[package]
name = "signer-backend"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.8"
ic-cdk = "0.13.2"
serde_bytes = "0.11.14"
serde = { version = "1.0.200", features = ["derive"] }
itertools = "0.12.1"
ic-certified-map = "0.4.0"
sha2 = "0.10.8"
anyhow = "1.0.71"
serde_cbor = "0.11.2"
sha256 = "1.1.1"
hex = "0.4.3"
